--- a/.github/workflows/yaml-lint.yml
+++ b/.github/workflows/yaml-lint.yml
@@ -1,5 +1,4 @@
 ---
-
 name: Lint YAML files
 
 on: [push, pull_request]
@@ -12,7 +11,6 @@ jobs:
       - name: Install yamllint
         run: |
           sudo apt-get update
-          sudo apt-get install yamllint -y
+          sudo apt-get install -y yamllint
       - name: Run yamllint
         run: yamllint .
-
